package com.github.meeting.demo.pattern.oberver;


/**
 * Description: 观察者
 *
 * @author pengpeng
 * @version 1.0
 * @since 2024/4/17
 */
public interface Observer {
    void update(String news);
}
